--- a/src/Header.css
+++ b/src/Header.css
@@ -2,16 +2,16 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: black;
+  background-color: white;
   position: sticky;
   top: 0;
   z-index: 100;
 }
 
 .header_logo {
-  width: 100px;
+  width: 120px;
   object-fit: contain;
-  margin: 0 20px;
+  margin: 0 30px;
 }
 
 .header_search {
@@ -24,14 +24,18 @@
 .header_searchInput {
   height: 12px;
   padding: 10px;
-  border: none;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
   width: 100%;
 }
 
 .header_searchIcon {
-  background-color: #fab005;
-  padding: 4px;
+  background-color: #fcc419;
+  margin-left: 3px;
+  padding: 5px;
   height: 15px;
+  border-radius: 5px;
+  color: white;
 }
 
 .header_nav {
@@ -44,9 +48,25 @@
   flex-direction: column;
   margin-left: 10px;
   margin-right: 10px;
-  color: white;
+  color: #495057;
 }
 
 .header_optionLineOne {
   font-size: 10px;
+}
+
+.header_optionLineTwo {
+  font-size: 13px;
+  font-weight: 800;
+  margin-top: 3px;
+}
+
+.header_optionBasket {
+  display: flex;
+  align-items: center;
+  color: #495057;
+}
+
+.header_optionLineTwo_basket {
+  margin-right: 10px;
 }
