--- a/src/Header.css
+++ b/src/Header.css
@@ -62,6 +62,7 @@
 }
 
 .header_optionBasket {
+  margin-left: 10px;
   display: flex;
   align-items: center;
   color: #495057;
@@ -69,4 +70,5 @@
 
 .header_optionLineTwo_basket {
   margin-right: 10px;
+  margin-left: 8px;
 }
