--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,15 @@
   z-index: 1;
 }
 
+.product_info {
+  height: 100px;
+  margin-bottom: 15px;
+}
+
+.product_price {
+  margin-top: 10px;
+}
+
 .product_rating {
   display: flex;
 }
