--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -25,6 +25,7 @@
 }
 
 .login_container > form > input {
+  border: 1px solid;
   border-radius: 5px;
   height: 30px;
   margin-bottom: 10px;
@@ -48,6 +49,7 @@
 }
 
 .login_register {
+  background-color: #61dafb;
   border-radius: 5px;
   width: 100%;
   height: 30px;
