--- a/src/css/Payment.css
+++ b/src/css/Payment.css
@@ -29,3 +29,23 @@
 .payment_details {
   flex: 0.8;
 }
+
+.payment_details > form {
+  max-width: 400px;
+}
+
+.payment_details > h3 {
+  padding-bottom: 20px;
+}
+
+.payment_details > form > div > button {
+  background: #a5a5f3;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  font-weight: bolder;
+  margin-top: 10px;
+  border-color: #a5a5f3 #8768bf #61dafb;
+  color: #111111;
+}
