--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -46,6 +46,7 @@
   border: 1px solid;
   margin-top: 10px;
   border-color: #61dafb #f3f3f3 #a5a5f3;
+  cursor: pointer;
 }
 
 .login_register {
@@ -56,4 +57,5 @@
   border: 1px solid;
   margin-top: 10px;
   border-color: lightgray;
+  cursor: pointer;
 }
