--- a/src/css/Payment.css
+++ b/src/css/Payment.css
@@ -48,4 +48,10 @@
   margin-top: 10px;
   border-color: #a5a5f3 #8768bf #61dafb;
   color: #111111;
+  cursor: pointer;
+}
+
+.payment_details > form > div > button:disabled {
+  opacity: 0.2;
+  cursor: not-allowed;
 }
